Knative configuration parameters are configurable
