# packages/operator/api/v1alpha1/zz_generated.deepcopy.go
@@ -140,6 +140,31 @@ func (in *DataBindingDir) DeepCopy() *DataBindingDir {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *DefaultRouteTemplate) DeepCopyInto(out *DefaultRouteTemplate) {
+	*out = *in
+	if in.Attempts != nil {
+		in, out := &in.Attempts, &out.Attempts
+		*out = new(int32)
+		**out = **in
+	}
+	if in.PerTryTimeout != nil {
+		in, out := &in.PerTryTimeout, &out.PerTryTimeout
+		*out = new(int32)
+		**out = **in
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new DefaultRouteTemplate.
+func (in *DefaultRouteTemplate) DeepCopy() *DefaultRouteTemplate {
+	if in == nil {
+		return nil
+	}
+	out := new(DefaultRouteTemplate)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *EnvironmentVariable) DeepCopyInto(out *EnvironmentVariable) {
 	*out = *in
 }
@@ -284,6 +309,16 @@ func (in *ModelDeploymentSpec) DeepCopyInto(out *ModelDeploymentSpec) {
 		for key, val := range *in {
 			(*out)[key] = val
 		}
+	}
+	if in.ContainerConcurrency != nil {
+		in, out := &in.ContainerConcurrency, &out.ContainerConcurrency
+		*out = new(int64)
+		**out = **in
+	}
+	if in.DefaultRoute != nil {
+		in, out := &in.DefaultRoute, &out.DefaultRoute
+		*out = new(DefaultRouteTemplate)
+		(*in).DeepCopyInto(*out)
 	}
 }
 
@@ -572,6 +607,16 @@ func (in *ModelRouteSpec) DeepCopyInto(out *ModelRouteSpec) {
 		for i := range *in {
 			(*in)[i].DeepCopyInto(&(*out)[i])
 		}
+	}
+	if in.Attempts != nil {
+		in, out := &in.Attempts, &out.Attempts
+		*out = new(int32)
+		**out = **in
+	}
+	if in.PerTryTimeout != nil {
+		in, out := &in.PerTryTimeout, &out.PerTryTimeout
+		*out = new(int32)
+		**out = **in
 	}
 }
 
