# packages/operator/docs/swagger.json
@@ -3131,6 +3131,19 @@
                 }
             }
         },
+        "DefaultRouteTemplate": {
+            "type": "object",
+            "properties": {
+                "attempts": {
+                    "description": "Number of retries for a given request. The interval\nbetween retries will be determined automatically (25ms+).",
+                    "type": "integer"
+                },
+                "per_try_timeout": {
+                    "description": "Timeout per retry attempt for a given request. Integer in seconds",
+                    "type": "integer"
+                }
+            }
+        },
         "EnvironmentVariable": {
             "type": "object",
             "properties": {
@@ -3153,6 +3166,15 @@
                     "additionalProperties": {
                         "type": "string"
                     }
+                },
+                "containerConcurrency": {
+                    "description": "ContainerConcurrency specifies the maximum allowed in-flight (concurrent)\nrequests per model.  Defaults to `0` which means\nconcurrency to the model is not limited, and the system decides the\ntarget concurrency for the autoscaler.\n+optional",
+                    "type": "integer"
+                },
+                "defaultRoute": {
+                    "description": "Parameters for default ModelRoute",
+                    "type": "object",
+                    "$ref": "#/definitions/DefaultRouteTemplate"
                 },
                 "image": {
                     "description": "Model Docker image",
@@ -3327,6 +3349,10 @@
         "ModelRouteSpec": {
             "type": "object",
             "properties": {
+                "attempts": {
+                    "description": "Number of retries for a given request. The interval\nbetween retries will be determined automatically (25ms+).",
+                    "type": "integer"
+                },
                 "mirror": {
                     "description": "Mirror HTTP traffic to a another Model deployment in addition to forwarding\nthe requests to the model deployments.",
                     "type": "string"
@@ -3337,6 +3363,10 @@
                     "items": {
                         "$ref": "#/definitions/ModelDeploymentTarget"
                     }
+                },
+                "per_try_timeout": {
+                    "description": "Timeout per retry attempt for a given request. Integer in seconds",
+                    "type": "integer"
                 },
                 "urlPrefix": {
                     "description": "URL prefix for model  For example: /custom/test\nPrefix must start with slash\n\"/feedback\" and \"/model\" are reserved for internal usage",
